<resources>
    <string name="app_name">UserInfo</string>
    <string name="UserName">User Name</string>
    <string name="EnterUserName">Enter user name</string>
    <string name="Email">Email</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="PinCode">Pin Code</string>
    <string name="EnterPhoneNumber">Enter Phone Number</string>
    <string name="EnterPinCode">Enter Pin code</string>
    <string name="Address">Address</string>
    <string name="Validate">Validate</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="EnterAddress">Enter Address</string>
    <string name="Cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="displayUserInfo"> Hi %1$s, How are you? Are you staying at %2$s-%3$s code.I am not able to contact you on %4$s. Can I email you the details at %5$s </string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>