<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:id="@+id/header"
        tools:layout_editor_absoluteX="139dp"
        tools:layout_editor_absoluteY="3dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UserName"

        android:id="@+id/userName"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:ignore="MissingConstraints" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EnterUserName"

        android:id="@+id/userNameET"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        android:ellipsize="end"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"

        android:id="@+id/email"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/userNameET"
        tools:ignore="MissingConstraints" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EnterEmail"

        android:id="@+id/emailET"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:ellipsize="end"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PhoneNumber"

        android:id="@+id/phoneNumber"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/emailET"
        tools:ignore="MissingConstraints" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EnterPhoneNumber"
        android:inputType="number"

        android:id="@+id/phoneNumberET"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        android:ellipsize="end"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PinCode"

        android:id="@+id/pinCode"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberET"
        tools:ignore="MissingConstraints" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EnterPinCode"
        android:inputType="number"
        android:id="@+id/pinCodeET"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/pinCode"
        android:ellipsize="end"
        tools:ignore="MissingConstraints" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Address"

        android:id="@+id/address"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/pinCodeET"
        tools:ignore="MissingConstraints" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EnterAddress"
        android:id="@+id/addressET"
        tools:layout_editor_absoluteX="1dp"
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:ellipsize="end"
        tools:ignore="MissingConstraints" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Validate"
        android:id="@+id/validateButton"
        app:layout_constraintTop_toBottomOf="@id/addressET"
        tools:ignore="MissingConstraints" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:visibility="gone"
        android:id="@+id/ConfirmButton"
        app:layout_constraintTop_toBottomOf="@id/validateButton"
        tools:ignore="MissingConstraints" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/cancelButton"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/ConfirmButton"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>